--- a/styles/equipos.css
+++ b/styles/equipos.css
@@ -8,7 +8,9 @@
     column-gap: 2ch;
     margin-bottom: 10ch;
 }
-
+.teams div.linea{
+    background-image: linear-gradient(transparent,purple);
+}
 .teams div{
     width: 100%;
     height: 100%;
@@ -29,9 +31,7 @@
     border-bottom-right-radius: 50px;
 }
 
-#linea{
-    background: linear-gradient(transparent,purple);
-}
+
 
 .header{
     grid-column-start: 1;
