--- a/styles/jugar.css
+++ b/styles/jugar.css
@@ -3,9 +3,10 @@
     color: white;
     text-decoration: none;
     display:flex;
-    transition: all .2s ease-in-out;
+    transition: all .3s ease-in-out;
     width: 100%;
-    background: linear-gradient(transparent,green);
+    background-image: linear-gradient(transparent,rgb(0, 128, 0));
+    background-color: rgb(0, 100, 15);
     align-items: center;
     justify-content: center;
     text-align: center;
@@ -14,15 +15,16 @@
     box-shadow: 0 0 10px rgba(0, 255, 30, 0.5);
 }
 .acceso:hover{
-    transform: scale(1.015);
-    background-color: rgba(0, 255, 26, 0.5);
+    transform: scale(1.018);
+    background-color: rgb(0, 255, 0);
 }
 
 .aviso{
     display: flex;
     transition: all .2s ease-in-out;
     width: 100%;
-    background: linear-gradient(transparent, red);
+    background-image: linear-gradient(transparent, rgb(158, 0, 0));
+    background-color: rgb(145, 0, 0);
     align-items: center;
     justify-content: center;
     text-align: center;
@@ -32,7 +34,7 @@
 }
 .aviso:hover{
     transform: scale(1.015);  
-    background-color: rgba(120, 0, 0, 0.5);
+    background-color: rgb(255, 0, 0);
 }
 
 .jugar{
