--- a/styles/perfil.css
+++ b/styles/perfil.css
@@ -38,11 +38,11 @@ h1{
     border-bottom: 2px solid white;
 }
 
-#puntos{
+.puntos{
     background-color: rgba(0, 255, 42, 0.628);
 }
 
-#penales{
+.penales{
     margin-top: -1ch;
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgb(0, 3, 156));
 
